# Walt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  demo.tape  demo_src.rs  ghkey  ghkey.pub  test.rs  test.sh  tester.sh
src/: ars_file.rs  decoder.rs  encoder.rs  lib.rs  main.rs  project_scanner.rs  test_B.rs
src/syntax_elements/: attributes.rs  constants.rs  enums.rs  expressions.rs  functions.rs  impl_blocks.rs  inject.sh  macros.rs  mod.rs  modules.rs  statements.rs  statics.rs  structs.rs  traits.rs  type_aliases.rs  use_statements.rs
